--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,14 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
+    <TextView android:text="FOGIndicator" android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/FOGindicator"
+        android:textSize="26dp"
+        android:textColor="#FF0000"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
